--- a/index.html
+++ b/index.html
@@ -25,11 +25,31 @@
                     <a href="#" class="link">Add Restaurant</a>
                     <a href="#" class="link">Log in</a>
                     <a href="#" class="link">sign in</a>
-                    <a href="#" class=user__icon><i class="fa-solid fa-user"></i>
+                    <a href="#" class="user__icon"><i class="fa-solid fa-user"></i>
                     </a>
                 </div>
             </nav>
         </header>
+        <div class="hero_section_container">
+            <img 
+             class="hero_section_logo" 
+             src="./images/heroSectionLogo.png"
+             alt="zomato logo"
+            />
+            <h1 class="hero_section_title">
+              Discover the best food &  dirnks in Nagpur
+            </h1>
+            <div class="hero_section_input_container">
+                <input class="input_container_location"
+                 type="text"
+                 placeholder= " Nagpur"
+                 />
+                 <input class="input_container_search" 
+                 type="text" 
+                 placeholder="Search for Restaurant,cuisine or a dish"
+                 />
+            </div>
+        </div>
     </section>
  </body>
 </html>
